Added NavBar, rearranged dashboard

--- a/money-tracker-application/src/styles/Transaction.css
+++ b/money-tracker-application/src/styles/Transaction.css
@@ -1,98 +1,99 @@
 * {
     box-sizing: border-box;
-  }
+    }
   
-  body {
+
+.transact-body {
     display: flex;
-    align-items: center;
-    height: 100vh;
-    flex-direction: column;
-    color: white;
-    background-color: #1F2833;
+    flex-direction: row;
+    padding: 1rem;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    }
   
-  }
-  
-  
-  .headers {
+.headers {
     display: flex;
     justify-content: space-between;
     margin-top: 2rem;
     margin-bottom: 2rem;
     align-items: flex-end;
-  }
+    }
   
-  .headers h1 {
+.headers h1 {
     margin: 0;
-  }
+    }
   
-  .headers .info h3,
-  .headers .info p {
+.headers .info h3,
+.headers .info p {
     margin: 0 auto;
-  }
+    }
   
-  form {
+form {
     display: flex;
     margin-bottom: 1rem;
     font-size: 16px;
   
-  }
+    }
   
-  form input {
+form input {
     background-color: transparent;
     color: #ccccccee;
     padding: 2px 5px;
     border: 2px solid #30313d;
     border-radius: 5px;
-  }
+    }
   
-  form label {
+form label {
     font-size: 16px;
-  }
+    }
   
-  form input, label {
+form input, label {
     width: 100%;
     justify-content: center;
     align-items: center;
-  }
+    }
   
-  form button {
+form button {
     width: 100%;
-  }
+    }
   
-  .basicInfo {
+.basicInfo {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 5px;
-  }
+    }
   
-  .description {
+.description {
     margin-bottom: 5px;
-  }
+    }
   
-  .transactions {
+.transactions {
     display: flex;
     gap: 2rem;
     width: 100%;
     justify-content: space-between;
     border-top: 2px solid #30313d;
-  }
+    }
   
-  .transactions .name {
+.transactions .name {
     font-size: 18px;
     color: white;
-  }
+    }
   
-  .transactions .description {
+.transactions .description {
     color: gray;
-  }
+    }
   
-  .right {
+.right {
     text-align: right;
-  }
+    }
   
-  svg.edit-delete {
+svg.edit-delete {
     background-color: #8a8f98;
     border-radius: 5px;
     cursor: pointer;
     margin: 0.1rem;
-  }
+    }
