--- a/money-tracker-application/src/App.css
+++ b/money-tracker-application/src/App.css
@@ -1,9 +1,9 @@
 
 .app-main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin: 0 auto;
-
 
 }
 
@@ -12,10 +12,11 @@
   align-items: center;
   justify-content: space-between;
   max-width: 75vw;
-  padding-top: 1rem;
+  padding-top: 5rem;
+
 }
 
-.navbar {
+/* .navbar {
   display: flex;
   height: 5rem;
   justify-content: space-between;
@@ -38,14 +39,14 @@
   flex-wrap: nowrap;
 }
 
-/*lining up navbar elements*/
+
 .navbar .nav-menu ul li {
   display: inline-block;
   list-style: none;
   margin: 10px 20px;
 } 
 
-/* remove hyperlink and add transition when hovering */
+
 .navbar .nav-menu ul li a{
   text-decoration: none;
   color: white;
@@ -53,11 +54,11 @@
   border-bottom: 2px solid transparent;
   transition: 0.4s;
 }
-/* navbar transition out when hovering is done*/
+
 .navbar .nav-menu ul li a:hover{
   background-color:#476e7f;
   border-radius: 2px;
   padding: 10px 10px;
   transition: 0.4s;
 }
-
+ */
