--- a/money-tracker-application/src/styles/Auth.css
+++ b/money-tracker-application/src/styles/Auth.css
@@ -2,19 +2,15 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    border-radius: 5px;
-    padding: 1rem;
-    background: #19202b;
+    padding: 2rem;
+
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); 
     padding: 15px;
     margin-bottom: 2rem;
-    height: 40vh;
-    width: 35vw;
+    min-height: 50vh;
+    min-width: 45vw;
     border-radius: 10px;
     animation: fadeIn 2s;
-        
-    
-
 }
 
 @keyframes fadeIn {
@@ -26,15 +22,23 @@ form {
     display: flex;
     font-size: 16px;
     flex-direction: column;
+    justify-content: center;
+
     }
   
 .form-section input {
-    margin-bottom: 0.7rem;
+    border: none;
+    border-bottom: 1px solid rgba(245, 245, 245, 0.466);
+    border-radius: 0px;
+    margin-bottom: 2rem;
     font-size: 16px;
+    width: 100%;
+    height: 40px;
 
 }
 form input::placeholder {
     color: rgb(175, 175, 175); 
+    font-size: 14px;
     
   }
 form button {
@@ -43,4 +47,8 @@ form button {
 }
 a {
     text-decoration: none;
+}
+
+.error {
+    color: #db0202;
 }
