--- a/money-tracker-application/src/styles/NavBar.css
+++ b/money-tracker-application/src/styles/NavBar.css
@@ -8,9 +8,9 @@
     background-color: rgb(28, 31, 42);
     border-bottom: 1px solid #385663;
     box-shadow: 0 8px 16px rgba(231, 231, 231, 0.2);
-    min-width: 100vw;
+    width: 100%;
     z-index: 1000;
-    
+    position: fixed;
   }
   
   .navbar .nav-menu ul {
