--- a/money-tracker-application/src/styles/Transaction.css
+++ b/money-tracker-application/src/styles/Transaction.css
@@ -19,6 +19,7 @@
 }    
 .right-body {
     padding: 1rem;
+    width: 50%
 }
 .headers {
     display: flex;
@@ -43,7 +44,8 @@ form {
     display: flex;
     margin-bottom: 1rem;
     font-size: 16px;
-  
+    padding: 1rem;
+    box-shadow: 0 8px 16px rgba(231, 231, 231, 0.2);
     }
   
 form input {
@@ -106,6 +108,22 @@ svg.edit-delete {
     margin: 0.1rem;
     }
 
+.budget-selector {
+    width: 100%;
+    margin-bottom: 0.5rem;
+}
 
+.budget-selector select {
+    width: 100%;
+    text-align: center;
+    padding: 0.1rem;
+    border-radius: 5px;
+    color: white;
+    font-size: 13px;
+    background-color: #30313d;
+    cursor: pointer;
+}
 
-/* Slider stuff */
+.budget-selector select:hover {
+    background-color: #2c3948;
+}
