--- a/money-tracker-application/src/styles/Budget.css
+++ b/money-tracker-application/src/styles/Budget.css
@@ -15,7 +15,7 @@
     align-items: center;
     padding: 1rem;
     padding-top: 0rem;
-    background: #2c3948;
+    background-color: #2c3948;
     /* border: 2px solid #bad1db; */
     box-shadow: 0 8px 16px rgba(231, 231, 231, 0.2);
     margin-bottom: 2rem;
